feat(reformulation): durable usage evidence and recoverable synthesis (#1101)
Integrate run-scoped durable usage, read-only consumption, shutdown/recovery fences and complete grouped formulation context.

Exact head 66ed31f passed canonical CI/CD, database compatibility and all other executed PR workflows. Concrete review threads are resolved; evidence and remaining package-5/6-8 scope are recorded in the PR. Original requirements, active architecture and human edits are not automatically adopted or changed.